force-app/main/default/objects/Exam_Domain__c/Exam_Domain__c.object-meta.xml
<CustomObject>
    <description>A weighted domain inside a certification exam.</description>
    <label>Exam Domain</label>
    <nameField>
        <label>Exam Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>