force-app/main/default/objects/Exam_Domain__c/fields/Domain_Order__c.field-meta.xml
<CustomField>
    <fullName>Domain_Order__c</fullName>
    <label>Domain Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>