force-app/main/default/objects/Exam_Domain__c/fields/Official_Objective_Text__c.field-meta.xml
<CustomField>
    <fullName>Official_Objective_Text__c</fullName>
    <label>Official Objective Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>