force-app/main/default/objects/Exam_Domain__c/fields/Weight_Percent__c.field-meta.xml
<CustomField>
    <fullName>Weight_Percent__c</fullName>
    <label>Weight Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>